fix: long math formula not fully visible on mobile

--- a/blog/.vuepress/theme/styles/markdown.scss
+++ b/blog/.vuepress/theme/styles/markdown.scss
@@ -18,6 +18,13 @@ h4 {
     margin: .5rem auto 1rem auto;
 }
 
+// math
+.MathJax {
+   padding: .5em;
+   overflow-x: auto; 
+   overflow-y: hidden;
+}
+
 // code line numbers
 div[class*=language-].line-numbers-mode .line-numbers {
     padding-top: 1rem;
